--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <body>
-    <h1>My Language Portfolio</h1>
+    <h1>Site exercise</h1>
     <p>This image is found using a Relative Path:</p>
     <img src="images/cat.jpg" alt="A cat">
 </body>
